--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -6,7 +6,53 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.adam.christina.androidfinal.CreateUser">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/user"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="127dp"
+            android:hint="@string/user" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/pass"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:hint="@string/pass" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/confirmPass"
+            android:layout_below="@+id/pass"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="55dp"
+            android:hint="@string/confirmPass" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/nextBtn"
+            android:id="@+id/nextBtn"
+            android:onClick="nextCreate"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/confirmPass"
+            android:layout_alignEnd="@+id/confirmPass" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/backBtn"
+            android:id="@+id/backBtn"
+            android:onClick="backBtn"
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/confirmPass" />
 
 </RelativeLayout>
