--- a/app/src/main/res/layout/activity_book_store.xml
+++ b/app/src/main/res/layout/activity_book_store.xml
@@ -2,64 +2,83 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.adam.christina.androidfinal.BookStore">
-
-    <SearchView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/searchView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="42dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginTop="39dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Search Book"
-        android:id="@+id/textView"
-        android:layout_alignBottom="@+id/searchView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="56dp"
-        android:layout_marginStart="56dp"
-        android:minWidth="200dp"
-        android:minHeight="40dp"
-        android:nestedScrollingEnabled="false" />
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:id="@+id/listView"
-        android:minHeight="400dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total Cost"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/listView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="32dp"
-        android:minHeight="40dp"
-        android:minWidth="200dp"
-        android:nestedScrollingEnabled="false" />
+    android:paddingTop="50dp"
+    android:paddingBottom="50dp"
+    tools:context="com.adam.christina.androidfinal.BookStore"
+    android:minWidth="700dp">
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Buy"
-        android:id="@+id/button3"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:id="@+id/chegBtn"
+        android:layout_below="@+id/amazonBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="45dp"
+        android:text="@string/chegg"
+        android:onClick="searchCheg"
+        android:minWidth="225dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/amazon"
+        android:id="@+id/amazonBtn"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="45dp"
+        android:onClick="searchAmazon"
+        android:minWidth="225dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/barnsAndNoble"
+        android:id="@+id/barnsBtn"
+        android:minWidth="225dp"
+        android:layout_below="@+id/chegBtn"
+        android:layout_marginBottom="45dp"
+        android:layout_centerHorizontal="true"
+        android:onClick="searchBarns"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search"
+        android:id="@+id/searchBtn"
+        android:onClick="searchInput"
+        android:layout_below="@+id/barnsBtn"
+        android:layout_toEndOf="@+id/ownSite" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title"
+        android:id="@+id/textView"
+        android:layout_marginBottom="45dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ownSite"
+        android:layout_alignBottom="@+id/searchBtn"
+        android:layout_alignEnd="@+id/textView"
+        android:minWidth="200dp"
+        android:hint="Or enter your own site" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/searchBtn"
+        android:text="@string/backBtn"
+        android:id="@+id/backBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:onClick="backToMain"/>
+
+
 
 </RelativeLayout>
