adams late night coding adventures
I made the GUI for the GPA calc made the calc class do the math and
checked it Calc class is dont just needs some refinment on GUI also i
made all of the book store links work

--- a/app/src/main/res/layout/activity_book_store.xml
+++ b/app/src/main/res/layout/activity_book_store.xml
@@ -27,7 +27,7 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="45dp"
-        android:onClick="searchAmazon"
+        android:onClick="seachAmazon"
         android:minWidth="225dp" />
 
     <Button
