--- a/app/src/main/res/layout/activity_book_store.xml
+++ b/app/src/main/res/layout/activity_book_store.xml
@@ -27,7 +27,7 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="45dp"
-        android:onClick="seachAmazon"
+        android:onClick="searchAmazon"
         android:minWidth="225dp" />
 
     <Button
